[gd_scene load_steps=33 format=3 uid="uid://718fnirmhlum"]

[ext_resource type="PackedScene" uid="uid://dpld85rb0smp5" path="res://HealthBar.tscn" id="2_8hsxv"]
[ext_resource type="Texture2D" uid="uid://uac60mxbct7l" path="res://Units/Knight/Knight_art/Knight with shadows/Knight-Idle.png" id="2_gxs7x"]
[ext_resource type="Script" path="res://Units/Crossbowman/Crossbowman.gd" id="2_jgudi"]
[ext_resource type="PackedScene" uid="uid://ds74uayhpq5ba" path="res://Effects/VFXSpawner.tscn" id="2_oyybm"]
[ext_resource type="Texture2D" uid="uid://b3mk747e50x3a" path="res://Units/Knight/Knight_art/Knight with shadows/Knight-Attack01.png" id="3_3xknj"]
[ext_resource type="Texture2D" uid="uid://dp8tax823r2xo" path="res://Units/Knight/Knight_art/Knight with shadows/Knight-Block.png" id="4_nv0ir"]
[ext_resource type="Texture2D" uid="uid://dlwk5i84ve2an" path="res://Units/Knight/Knight_art/Knight with shadows/Knight-Death.png" id="5_usixv"]
[ext_resource type="Texture2D" uid="uid://c8dy8jd4cu2j6" path="res://Units/Knight/Knight_art/Knight with shadows/Knight-Hurt.png" id="6_emkqw"]
[ext_resource type="Texture2D" uid="uid://b0yt31lb6jm23" path="res://Units/Knight/Knight_art/Knight with shadows/Knight-Walk.png" id="7_1cpbc"]
[ext_resource type="Script" path="res://Components/HealthComponent.gd" id="9_ir8dp"]
[ext_resource type="Script" path="res://Components/HitboxComponent.gd" id="10_btlfu"]
[ext_resource type="Script" path="res://Components/StateMachines/StateMachine.gd" id="11_d1a84"]
[ext_resource type="Script" path="res://Components/PlayerStates/idle.gd" id="12_i5rdk"]
[ext_resource type="Script" path="res://Components/PlayerStates/walk.gd" id="13_mcmkm"]
[ext_resource type="Script" path="res://Components/PlayerStates/attack.gd" id="14_sdlih"]
[ext_resource type="Script" path="res://Components/PlayerStates/death.gd" id="15_y1883"]
[ext_resource type="Script" path="res://Components/PlayerStates/block.gd" id="16_l8m1v"]
[ext_resource type="Script" path="res://Components/PlayerStates/hurt.gd" id="17_6t14m"]
[ext_resource type="PackedScene" uid="uid://ixw2h120p7tr" path="res://Components/PlayerStates/PlayerController.tscn" id="18_13evc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pogrd"]
radius = 9.0

[sub_resource type="Animation" id="Animation_fkxt2"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gxs7x")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_amw7o"]
resource_name = "attack_1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_3xknj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_bei6m"]
resource_name = "block"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_nv0ir")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_r2h23"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_usixv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_f1ebu"]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_emkqw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_xjg5s"]
resource_name = "Idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_jgqou"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_1cpbc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vcnj6"]
_data = {
"RESET": SubResource("Animation_fkxt2"),
"attack01": SubResource("Animation_amw7o"),
"block": SubResource("Animation_bei6m"),
"death": SubResource("Animation_r2h23"),
"hurt": SubResource("Animation_f1ebu"),
"idle": SubResource("Animation_xjg5s"),
"walk": SubResource("Animation_jgqou")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06236"]
bg_color = Color(0, 0.435294, 0.266667, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.756863, 0.203922, 0.690196)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20
anti_aliasing = false
anti_aliasing_size = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_6k7nc"]
radius = 88.0057

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b4xqv"]
radius = 7.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kbc84"]
radius = 14.0
height = 28.0

[node name="Knight" type="CharacterBody2D" node_paths=PackedStringArray("health_component") groups=["player"]]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 5
script = ExtResource("2_jgudi")
health_component = NodePath("HealthComponent")
wpnSpd = 3.15
moveSpeed = 40

[node name="HealthBar" parent="." instance=ExtResource("2_8hsxv")]
offset_left = -15.866
offset_top = -21.195
offset_right = 16.134
offset_bottom = -9.195

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.01, 6.625)
shape = SubResource("CircleShape2D_pogrd")
debug_color = Color(0.185944, 0.637824, 0.232843, 0.0823529)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vcnj6")
}
autoplay = "idle"

[node name="Selection" type="Panel" parent="."]
visibility_layer = 2
y_sort_enabled = true
offset_left = -9.0
offset_top = -2.0
offset_right = 9.0
offset_bottom = 16.0
theme_override_styles/panel = SubResource("StyleBoxFlat_06236")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
texture = ExtResource("2_gxs7x")
hframes = 6

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("9_ir8dp")
parent = NodePath("..")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color(0.556863, 1, 1, 0.482353)
light_mask = 2
visibility_layer = 4
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_6k7nc")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
modulate = Color(0.117647, 1, 0, 1)
shape = SubResource("CapsuleShape2D_b4xqv")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("parent")]
position = Vector2(16, -1)
collision_layer = 2
collision_mask = 4
monitoring = false
script = ExtResource("10_btlfu")
parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
modulate = Color(0, 0.545098, 1, 1)
light_mask = 2
visibility_layer = 4
position = Vector2(-4, 0)
shape = SubResource("CapsuleShape2D_kbc84")
disabled = true

[node name="AttackSpeedTimer" type="Timer" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_d1a84")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource("12_i5rdk")

[node name="walk" type="Node" parent="StateMachine"]
script = ExtResource("13_mcmkm")

[node name="attack" type="Node" parent="StateMachine"]
script = ExtResource("14_sdlih")

[node name="death" type="Node" parent="StateMachine"]
script = ExtResource("15_y1883")

[node name="block" type="Node" parent="StateMachine"]
script = ExtResource("16_l8m1v")

[node name="hurt" type="Node" parent="StateMachine"]
script = ExtResource("17_6t14m")

[node name="PlayerController" parent="." node_paths=PackedStringArray("player", "animPlayer", "weapon", "hurtbox", "VFX", "atkTimer") instance=ExtResource("18_13evc")]
player = NodePath("..")
animPlayer = NodePath("../AnimationPlayer")
weapon = NodePath("../HitboxComponent")
hurtbox = NodePath("../HurtboxComponent")
VFX = NodePath("../VFXSpawner")
atkTimer = NodePath("../AttackSpeedTimer")

[node name="VFXSpawner" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_oyybm")]
parent = NodePath("..")

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/attack" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/death" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/block" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/hurt" method="_on_animation_player_animation_finished"]
[connection signal="damage_blocked" from="HealthComponent" to="StateMachine/idle" method="_on_health_component_damage_blocked"]
[connection signal="damage_blocked" from="HealthComponent" to="StateMachine/walk" method="_on_health_component_damage_blocked"]
[connection signal="damage_blocked" from="HealthComponent" to="StateMachine/attack" method="_on_health_component_damage_blocked"]
[connection signal="damage_hurt" from="HealthComponent" to="StateMachine/idle" method="_on_health_component_damage_hurt"]
[connection signal="damage_hurt" from="HealthComponent" to="StateMachine/walk" method="_on_health_component_damage_hurt"]
[connection signal="damage_hurt" from="HealthComponent" to="StateMachine/attack" method="_on_health_component_damage_hurt"]
[connection signal="damage_hurt" from="HealthComponent" to="StateMachine/hurt" method="_on_health_component_damage_hurt"]
[connection signal="body_entered" from="EnemyDetector" to="PlayerController" method="_on_enemy_detector_body_entered"]
[connection signal="area_entered" from="HurtboxComponent" to="HealthComponent" method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="AttackSpeedTimer" to="PlayerController" method="_on_attack_speed_timer_timeout"]
